/***********************************************************************
X3 ChangeLog

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_servers function.

2009-10-06  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: fix a bunch of typos

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_channels function.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_get_users function.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: raise exception on failure in emb_get_account.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: raise exception on unknown channel in emb_get_channel

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: make emb_send_target_notice more resilient toward
	erroneous input and raise exceptions on failures.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: make emb_send_target_privmsg more resilient toward
	erroneous input and raise exceptions on failures.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: make emb_dump raise exception on failure.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: set exception on error path in emb_get_user.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: extract userNode to Python dictionary conversion for
	future use in handlers.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: do not leak handler objects

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add support for specifying main module in x3.conf

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: Expose Python services module as _svc to follow normal
	Python naming conventions for C extensions.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: Remove unused function.

2009-10-05  Henrik Stuart <evilnet@hstuart.dk>
